<?xml version="1.0"?>
<package format="2">
  <name>ur_controllers</name>
  <version>0.0.0</version>
  <description>The ur_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhao@todo.todo">zhao</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  
  <depend>actionlib</depend>
  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>speed_scaling_interface</depend>
  <depend>speed_scaling_state_controller</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>trajectory_msgs</depend>
  <depend>ur_robot_driver</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  <depend>pinocchio</depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/ur_controllers_plugin.xml" />
  </export>
</package>
